Store the selected theme

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -17,7 +17,7 @@
             </button>
         </form>
 
-        <button id="mode-toggle" type="button" class="button button-outline">
+        <button id="theme-toggle" type="button" class="button button-outline">
             <img src="{{ `/img/brightness-4.svg` | relURL }}">
         </button>
     </nav>
