Create 'Connect' message

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -42,6 +42,10 @@
 
 {{ define "main" }}
 <main>
+    <section class="msg">
+        <h4>Connect to your Stack Overflow account to view and search your bookmarks</h4>
+        <button type="button" class="button">Connect</button>
+    </section>
 </main>
 
 <template id="template-chip">
