--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -194,3 +194,36 @@ form.inline *:last-child {
     justify-content: center;
     align-items: center;
 }
+
+footer {
+    border-top: 1px solid gray;
+    background-color: var(--color-surface);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0.75rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer * {
+    margin: 0;
+}
+
+footer .button-small {
+    padding: 0 1rem;
+}
+
+.button-small {
+    font-size: 1rem;
+    height: 2.8rem;
+    /* line-height: 2.8rem; */
+    padding: 0 1.5rem;
+}
+
+#btn-disconnect {
+    visibility: hidden;
+}
