Add Stack Exchange attribution

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -87,6 +87,8 @@
 
 {{ define "footer" }}
 <footer>
+    <p>powered by <a href="#">Stack Exchange</a></p>
+
     <p>designed by <a href="#">Sammy T</a></p>
 
     <a href="#" class="brand">
