--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,4 +1,5 @@
 {{ define "page-head" }}
+<script src="{{ `/js/dewy-info.js` | relURL }}"></script>
 <script src="{{ `/js/dewy.js` | relURL }}" defer></script>
 {{ end }}
 
