--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -128,6 +128,8 @@ form.inline *:last-child {
 
 .chip-container {
     display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .chip {
