Add sort selection

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -30,8 +30,10 @@
         <form id="sort-form" class="inline">
             <label for="sort-by"><h6>Sort by</h6></label>
             <select id="sort-by">
-                <option value="date-desc" selected>Newest</option>
-                <option value="date-asc">Oldest</option>
+                <option value="added" selected>Added</option>
+                <option value="activity">Activity</option>
+                <option value="creation">Creation</option>
+                <option value="votes">Votes</option>
             </select>
         </form>
     </section>
