Replace connect button partial with fetch auth link function

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -47,7 +47,7 @@
 <template id="template-msg-connect">
     <section class="msg">
         <h4>Connect to your Stack Overflow account to view and search your bookmarks</h4>
-        {{ partial "connect-button" . }}
+        <a href="#" target="_blank" class="button connect">Connect</a>
     </section>
 </template>
 
