Add link paths to footer

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -89,11 +89,12 @@
 
 {{ define "footer" }}
 <footer>
-    <p>powered by <a href="#">Stack Exchange</a></p>
+    <p>powered by <a href="https://stackexchange.com/" target="_blank">Stack Exchange</a></p>
 
-    <p>designed by <a href="#">Sammy T</a></p>
+    <p>designed by <a href="https://github.com/Sammy-T" target="_blank">Sammy T</a></p>
 
-    <a href="#" class="brand">
+    <!-- TODO: Add repo link -->
+    <a href="#" class="brand" target="_blank">
         <img src="{{ `/img/github.svg` | relURL }}">
         <p>GitHub</p>
     </a>
