Add tag searching
The user can click on the tag to append it to their query and initiate the updated search.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -51,9 +51,9 @@
     </section>
 </template>
 
-<!-- Chip template -->
-<template id="template-chip">
-    <div class="chip">Tag</div>
+<!-- Tag template -->
+<template id="template-tag">
+    <a href="#" class="tag">Tag</a>
 </template>
 
 <!-- Card template -->
@@ -73,7 +73,7 @@
             <div class="post-details">
                 <a href="#" target="_blank" class="post-link"><h4 class="post-title">title</h4></a>
                 <p class="post-author">author</p>
-                <div class="chip-container">
+                <div class="tag-container">
                 </div>
             </div>
 
