--- a/site/static/css/styles.css
+++ b/site/static/css/styles.css
@@ -134,15 +134,17 @@ form.inline *:last-child {
     margin: 0;
 }
 
-.chip-container {
+.tag-container {
     display: flex;
     align-items: flex-start;
     flex-wrap: wrap;
+    padding-top: 1rem;
 }
 
-.chip {
+.tag {
     border: 1px solid var(--color-chip-border);
     background-color: var(--color-chip);
+    color: var(--color-text);
     border-radius: 1.5rem;
     margin: 0.25rem;
     padding: 0.3rem 1rem;
@@ -151,13 +153,13 @@ form.inline *:last-child {
     box-shadow: 0 0.2rem 0 rgb(0 0 0 / var(--chip-shadow-strength));
 }
 
-.chip * {
+.tag * {
     margin: 0;
 }
 
-.chip:hover {
+.tag:hover, .tag:focus {
     background-color: var(--color-chip-hover);
-    cursor: pointer;
+    color: var(--color-text);
 }
 
 .card {
