Add manual token setting for local environment
Auth codes are immediately used when the auth flow redirects back to the site. This creates an issue where localhost environments cannot obtain a valid, unused auth code to exchange for an access token.

This provides a way to create valid auth on localhost by manually providing a valid token to the 'devCheckAuth' function. The token can be obtained from the cookie by using the console.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,5 +1,10 @@
 {{ define "page-head" }}
 <script src="{{ `/js/dewy.js` | relURL }}" defer></script>
+
+{{ if eq hugo.Environment "development" }}
+    {{ $devScript := resources.Get "js/dewy-dev.js" }}
+    <script src="{{ $devScript.RelPermalink }}" defer></script>
+{{ end }}
 {{ end }}
 
 {{ define "header" }}
