Add logout function
The user can logout via the modal which triggers a removal of their auth cookie.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -120,7 +120,7 @@
         <p>GitHub</p>
     </a>
 
-    <button type="button" id="btn-logout" class="button button-outline">
+    <button type="button" id="btn-logout" class="button button-outline" disabled>
         <img src="{{ `/img/logout.svg` | relURL }}">
     </button>
 </footer>
