Add title, description, and GitHub link.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -114,8 +114,7 @@
 
     <p>designed by <a href="https://github.com/Sammy-T" target="_blank">Sammy T</a></p>
 
-    <!-- TODO: Add repo link -->
-    <a href="#" class="brand" target="_blank">
+    <a href="https://github.com/Sammy-T/dewy" class="brand" target="_blank">
         <img src="{{ `/img/github.svg` | relURL }}">
         <p>GitHub</p>
     </a>
