--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <base href="{{ if getenv `CONTEXT` }}{{ cond (eq `production` (getenv `CONTEXT`)) (getenv `URL`) (getenv `DEPLOY_PRIME_URL`) }}{{ else }}{{ $.Site.BaseURL }}{{ end }}">
-  <title>{{ $.Site.Title }}</title>
+
+  <title>{{ $.Site.Title }} - Search Stack Overflow bookmarks</title>
+  <meta name="description" content="Dewy allows you to search through posts bookmarked on your Stack Overflow account.">
 
   <!-- Milligram -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
