Add cookie message

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -106,6 +106,16 @@
         </div>
     </div>
 </template>
+
+<!-- Cookie message template -->
+<template id="template-msg-bar-cookie">
+    <div class="msg-bar">
+        <div class="msg-content container">
+            <p>This site uses cookies to persist daily user sessions. This does not include your account information.</p>
+            <button type="button" class="button">Confirm</button>
+        </div>
+    </div>
+</template>
 {{ end }}
 
 {{ define "footer" }}
