Add exact and tag search

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -16,7 +16,7 @@
         </a>
 
         <form id="search-form" class="inline">
-            <input id="search-input" type="search" placeholder="Search">
+            <input id="search-input" type="search" placeholder="Search... &quot;exact&quot; [tag]">
             <button type="submit" class="button">
                 <img src="{{ `/img/magnify.svg` | relURL }}">
             </button>
