--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -56,6 +56,14 @@
     </section>
 </template>
 
+<!-- Loading Message template -->
+<template id="template-msg-loading">
+    <section class="msg loading">
+        <h4>Loading</h4>
+        {{ partial "icons/loading.html" . }}
+    </section>
+</template>
+
 <!-- Tag template -->
 <template id="template-tag">
     <a href="#" class="tag">Tag</a>
