--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Simple search functionality for your bookmarked Stack Overflow posts.">
 
         <title>{{ $.Site.Title }} - Search Stack Overflow bookmarks</title>
         
