Add img alt attributes

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -11,14 +11,14 @@
 <header>
     <nav>
         <a href="{{ `/` | relURL }}" class="brand">
-            <img src="{{ `/img/dewy-ic.svg` | relURL }}">
+            <img src="{{ `/img/dewy-ic.svg` | relURL }}" alt="">
             <h4>dewy</h4>
         </a>
 
         <form id="search-form" class="inline">
             <input id="search-input" type="search" placeholder="Search... &quot;exact&quot; [tag]">
             <button type="submit" class="button">
-                <img src="{{ `/img/magnify.svg` | relURL }}">
+                <img src="{{ `/img/magnify.svg` | relURL }}" alt="search">
             </button>
         </form>
 
@@ -133,7 +133,7 @@
     <p>designed by <a href="https://github.com/Sammy-T" target="_blank">Sammy T</a></p>
 
     <a href="https://github.com/Sammy-T/dewy" class="brand" target="_blank">
-        <img src="{{ `/img/github.svg` | relURL }}">
+        <img src="{{ `/img/github.svg` | relURL }}" alt="">
         <p>GitHub</p>
     </a>
 
