Restrict external link contexts

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="post-details">
-                <a href="#" target="_blank" class="post-link"><h4 class="post-title">title</h4></a>
+                <a href="#" target="_blank" rel="noopener" class="post-link"><h4 class="post-title">title</h4></a>
                 <p class="post-author">author</p>
                 <div class="tag-container">
                 </div>
@@ -128,11 +128,11 @@
 
 {{ define "footer" }}
 <footer>
-    <p>powered by <a href="https://stackexchange.com/" target="_blank">Stack Exchange</a></p>
+    <p>powered by <a href="https://stackexchange.com/" target="_blank" rel="noopener">Stack Exchange</a></p>
 
-    <p>designed by <a href="https://github.com/Sammy-T" target="_blank">Sammy T</a></p>
+    <p>designed by <a href="https://github.com/Sammy-T" target="_blank" rel="noopener">Sammy T</a></p>
 
-    <a href="https://github.com/Sammy-T/dewy" class="brand" target="_blank">
+    <a href="https://github.com/Sammy-T/dewy" class="brand" target="_blank" rel="noopener">
         <img src="{{ `/img/github.svg` | relURL }}" alt="">
         <p>GitHub</p>
     </a>
