--- a/site/assets/css/main.css
+++ b/site/assets/css/main.css
@@ -115,7 +115,7 @@ section {
 #opts-section {
     max-width: 1120px;
     margin: 0 auto;
-    display: flex;
+    /* display: flex; */
     border-bottom: 1px solid var(--color-detail);
 }
 
@@ -125,8 +125,20 @@ section {
     align-items: center;
 }
 
-#sort-form label {
-    flex-shrink: 0;
+#opts-form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#opts-form fieldset {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#opts-form label {
+    white-space: nowrap;
 }
 
 main {
