Populate 'site' select from request

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -30,8 +30,8 @@
     <section id="opts-section">
         <form id="opts-form" class="inline">
             <fieldset class="inline">
-                <label for="account"><h6>Account</h6></label>
-                <select id="account"></select>
+                <label for="site"><h6>Site</h6></label>
+                <select id="site"></select>
             </fieldset>
 
             <fieldset class="inline">
