Display message on empty results

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -68,6 +68,13 @@
     </section>
 </template>
 
+<!-- No Results template -->
+<template id="template-no-results">
+    <section class="msg">
+        <h4>No results found</h4>
+    </section>
+</template>
+
 <!-- Tag template -->
 <template id="template-tag">
     <a href="#" class="tag">Tag</a>
