--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -6,6 +6,8 @@
         <meta name="description" content="Simple search functionality for your bookmarked Stack Overflow posts.">
 
         <title>{{ $.Site.Title }} - Search Stack Overflow bookmarks</title>
+
+        <link rel="icon" href="{{ `/img/dewy-ic.svg` | relURL }}">
         
         <!-- Process CSS files with PostCSS -->
         <!-- More details: https://gohugo.io/hugo-pipes/postcss/ -->
